traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:10: error: ')' expected but 'else' found.
    else{
    ^